fixed navbar covering content issue #10

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,6 @@
 body {
   background-color: #F1F1F1; 
+  padding-bottom: 150px;
 } /* body */
 
 
